# hive

./: .codecov.yml  .dockerignore  .env.example  .env.project.example  .gitignore  .golangci.yml  .hive  .last-branch  0001-feat-display-nested-internal-tasks-in-TUI-monitor.patch  0001-fix-auto-complete-in_progress-tasks-when-drone-shuts.patch  0002-fix-use-white-text-for-task-descriptions-in-TUI-57.patch  CHANGELOG-test.md  CHANGELOG.md  CLAUDE.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  Cross.toml  Dockerfile  LICENSE  MIGRATION.md  Makefile  README-RUST.md  README.md  RUST-COMPLETION.md  RUST-PROGRESS.md  SECURITY.md  backends.py  bacon.toml  docker-compose.yml  drone-status.json  entrypoint.sh  go.mod  go.sum  hive-hook.sh  hive.sh  hive.yaml.example  hooks-test.txt  install-rust.sh  (+10 more)
.cargo/: config.toml
.github/workflows/: ci-desktop.yml  ci-rust.yml  ci.yml  release-rust.yml  release.yml  test.yml
agent-teams-analysis/: 01-task-system.md  02-team-config.md  03-message-system.md  04-lifecycle.md  README.md
backend/: api.go
cmd/: agents.go  build.go  clean.go  clean_test.go  cmd_test.go  colors.go  config.go  config_test.go  connect.go  expose.go  expose_test.go  hub.go  init.go  init_compose.go  init_config.go  init_detect.go  init_env.go  init_extract.go  init_sync.go  init_test.go  init_validate.go  init_wizard.go  init_worktree.go  kill.go  logs.go  logs_test.go  mcp.go  monitor.go  msg.go  ps.go  ps_test.go  root.go  setup.go  spawn.go  start.go  start_test.go  status.go  stop.go  stop_test.go  tools.go  (+4 more)
commands/: hive:clean.md  hive:init.md  hive:kill.md  hive:list.md  hive:logs.md  hive:plan.md  hive:prd.md  hive:profile.md  hive:start.md  hive:status.md  hive:statusline.md  hive:stop.md
desktop/: package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: README.md  icon.icns
desktop/src-tauri/src/: commands.rs  main.rs
docker/: Dockerfile.minimal  Dockerfile.node  Dockerfile.python  README.md
docs/: PLAN_GUIDE.md  PRD_GUIDE.md  architecture.md  autonomous-testing.md  best-practices.md  commands.md  configuration.md  faq.md  github-actions-setup.md  homebrew-setup.md  host-mcps.md  index.html  mcp-setup.md  sdk-migration-plan.md  troubleshooting.md
docs/assets/: style.css
examples/: prd-enhanced-example.json
examples/expo-mobile/: .gitignore  CRASH-ANALYSIS.md  EVOLUTIONS.md  README.md  TEST-REPORT.md  app.json  hive.yaml  package-lock.json  package.json  tasks.md
examples/golang-api/: README.md  tasks.md
examples/nodejs-monorepo/: README.md  tasks.md
examples/python-ml/: README.md
examples/react-web/: .gitignore  README.md  hive-config  index.html  package-lock.json  package.json  tasks.md
examples/rust-cli/: README.md
frontend/: Button.tsx
internal/agent/: agent-system-prompt.md  client.go  client_test.go  hive-commands.sh  manager.go  manager_test.go  sandbox-config.json  spawner.go  types.go
internal/compose/: generator.go  generator_test.go
internal/config/: config.go  config_test.go
internal/embed/: embed.go  embed_test.go
internal/event/: dispatcher.go  dispatcher_test.go
internal/hostmcp/: clipboard.go  ios.go  manager.go  playwright.go
internal/hub/: api.go  handlers_port.go  handlers_solicitation.go  handlers_task.go  hub.go  hub_test.go  state.go  state_test.go  websocket.go
internal/integration/: container_test.go
internal/logger/: logger.go  logger_test.go
internal/mcp/: adapter.go  registry.go  server.go  types.go
internal/monitor/: client.go  client_test.go  tui.go  web.go
internal/port/: models.go  registry.go  registry_test.go
internal/preflight/: checks.go  checks_test.go
internal/shell/: executor.go  executor_test.go  mock_executor.go  runner.go  runner_test.go
internal/solicitation/: manager.go  manager_test.go  models.go
internal/task/: manager.go  manager_test.go  models.go
internal/tasks/: manager.go  manager_test.go
internal/testutil/: console.go
internal/ui/: components.go  components_test.go  prompts.go  prompts_test.go  styles.go  theme.go
internal/worktree/: worktree.go  worktree_test.go
scripts/: clean-fixtures.sh  hive.sh  install-hooks.sh  seed-fixtures.sh
scripts/mcp/: hive-clipboard-mcp.js  hive-ios-mcp.js  hive-mcp.js  package.json
scripts/redis/: redis-monitor.sh  task-complete.sh  task-dequeue.sh  task-enqueue.sh  task-fail.sh  task-status.sh
skills/: hive:plan.md  hive:prd.md
src/: config.rs  events.rs  greeting.rs  lib.rs  main.rs  notification.rs  notifications.rs  plan_parser.rs  types.rs
src/agent_teams/: mod.rs  snapshot.rs  task_sync.rs  tests.rs
src/backend/: agent_team.rs  mod.rs  native.rs
src/chat/: app.rs  claude.rs  commands.rs  dialogs.rs  input.rs  keybinds.rs  messages.rs  mod.rs  provider.rs  session.rs  sidebar.rs  theme.rs
src/chat_engine/: agentic.rs  context.rs  mod.rs  persistence.rs  project_context.rs  (+6 more)
templates/: CLAUDE-QUEEN.md  CLAUDE-WORKER.md  hive-commands.sh
tests/: README.md  init_tests.rs  integration_tests.rs  kill_clean_tests.rs  logs_tests.rs  profile_tests.rs  resume_tests.rs  sessions_tests.rs  start_tests.rs  status_tests.rs  tui_tests.rs  unblock_tests.rs  util_tests.rs  version_tests.rs
web/: .gitignore  biome.json  electron-builder.yml  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
(+621 files in other folders)
