[package]
name = "hive"
version = "2.2.4"
edition = "2021"
authors = ["Mathieu Bourmaud <mathieu.bourmaud@gmail.com>"]
description = "CLI tool for orchestrating multiple Claude Code instances via git worktrees"
license = "MIT"
repository = "https://github.com/mbourmaud/hive"

[lib]
name = "hive_lib"
path = "src/lib.rs"

[[bin]]
name = "hive"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ratatui = "0.28"
crossterm = "0.28"
dialoguer = "0.11"
colored = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
rust-embed = "8"
nix = { version = "0.29", features = ["signal"] }

[dev-dependencies]
tempfile = "3"
insta = { version = "1", features = ["yaml"] }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
