[package]
name = "hive"
version = "3.8.1"
edition = "2021"
authors = ["Mathieu Bourmaud <mathieu.bourmaud@gmail.com>"]
description = "CLI tool for orchestrating multiple Claude Code instances via git worktrees"
license = "MIT"
repository = "https://github.com/mbourmaud/hive"

[lib]
name = "hive_lib"
path = "src/lib.rs"

[[bin]]
name = "hive"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
dialoguer = "0.11"
colored = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
reqwest = { version = "0.12", features = ["blocking", "json", "stream", "rustls-tls-webpki-roots"], default-features = false }
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
rust-embed = "8"
nix = { version = "0.29", features = ["signal"] }
garde = { version = "0.22", features = ["derive"] }
axum = { version = "0.8", features = ["multipart"] }
thiserror = "2"
tower-http = { version = "0.6", features = ["cors"] }
tokio-stream = { version = "0.1", features = ["sync"] }
async-stream = "0.3"
urlencoding = "2"
futures-util = "0.3"
glob = "0.3"
socket2 = "0.6.2"
aws-sigv4 = "1"
aws-credential-types = { version = "1", features = ["hardcoded-credentials"] }
aws-config = { version = "1", features = ["sso"] }
http = "1"
regex = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
tempfile = "3"

[profile.dev]
opt-level = 0
debug = 1            # Limited debug info — faster linking
incremental = true

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
